# fastapi-online-cinema

./: README.md  cinema.db  pyproject.toml
alembic/: env.py
online_cinema/: database.py  main.py
online_cinema/models/: users.py
online_cinema/routes/: users.py
online_cinema/schemas/: users.py
online_cinema/utils/: passwords.py
